# code_educa

./: README.md
2019-2-cpp/: Ejemplo1.cpp  Ejemplo1a.cpp  Ejemplo1a.h  Ejemplo2.cpp  Ejemplo2a.cpp  Ejemplo2a.h  Ejemplo3.cpp  Ejemplo4.cpp  Ejercicio1.cpp  Ejercicio2.cpp  Ejercicio3.cpp  Ejercicio4.cpp  mEjemplo1a.cpp  main.cpp  tipos.h
2019-2-cpp/ejemplos/subtyping/: AbstractPoligono.h  CMakeLists.txt  Elipse.cpp  Elipse.h  Paralelograma.cpp  Paralelograma.h  Poligono.cpp  Poligono.h  Tipos.h  Triangulo.cpp  Triangulo.h  main.cpp
2019-2-cpp/latex_src/: beamerinnerthemelumc.sty
2019-2-cpp/pc3_ejemplos/: CBancoCentral.cpp  CBancoCentral.h  CCliente.cpp  CCliente.h  CMakeLists.txt  Tipos.h  main.cpp
2019-2-cpp/pc3_ejemplos_1/: Makefile
2019-2-cpp/pc3_ejemplos_1/src/: CLavadora.cpp  CLavadora.h  CMakeLists.txt  CMotor.cpp  CMotor.h  CTambor.h  Ctambor.cpp  Tipos.h  main.cpp
2019-2-cpp/pc_3_ejemplos_2/: CMakeLists.txt
2019-2-cpp/pc_3_ejemplos_2/src/: CAlumno.cpp  CAlumno.h  CAula.cpp  CAula.h  Tipos.h  main.cpp
archivos-sol/: CMakeLists.txt  README.md
covid19simula/: README.md  collpuntos.py  colltiempo.py  main.py  model.py  requirements.txt
cpp/: README.md  hr2.cpp
cpp/2018-2-cpp/: CMakeLists.txt  README.md  main.cpp  sumatorias.cpp  sumatorias.h
cpp/2019-2/: readme.md
cpp/catch2cpp/: CMakeLists.txt  Perros.cpp  main.cpp
cpp/catch2cpp/Catch_test/: CMakeLists.txt  demo2Test.cpp
cpp/catch2cpp/Catch_test/perros/: Perros.cpp  Perros.h
cpp/cpp-2/: MisFunciones.cpp  MisFunciones.h  arr1.cpp  arr2.cpp  arr3.cpp  arr4.cpp  arr5.cpp  arr6.cpp  array.cpp  comparethetriples.cpp  convertir.cpp  funciones.cpp  main.cpp
cpp/week10/: eje1.cc  eje10.cc  eje11.cc  eje11b.cc  eje2.cc  eje3.cc  eje4.cc  eje4a.cc  eje5.cc  eje6.cc  eje7.cc  eje8.cc
cpp/week10/PrjAlum/: Alumno.cpp  Alumno.h  CMakeLists.txt  Seccion.cpp  Seccion.h  main.cpp
cpp/week9/: eje1.cc  eje2.cc  eje3.cc  exa1.cc
programacion-competitiva/codesprint-3/: smallcalc.py  snakevswind.py  volcano.py  volcano2.py
programacion-competitiva/ejemplos/: Hello.cpp  Program1.pas  eje01.py  eje02.py  eje03.py  eje04.py  eje05.py  eje06.py  eje07.py  eje08.py  eje09.py  eje10.py  eje11.py  w2_eje01.py  w2_eje02.py  w2_eje03.py  w2_eje04.py  w2_eje05.py  w2_eje06.py  w2_eje07.py
programacion-competitiva/material/: CP00_week4b.pptx  CP00_week5.pptx  CP00_week6.pptx  Introducción a la programación competitiva_week4.docx  Semana 4.pptx  eje01.py  eje02.py  eje03.py  eje05.py  p_01.py  p_03.py  p_05.py
proyectos/proyectos-cpp/: README.md
python/: Guia para Instalar Python-Windows-2019.docx
python/2018-1/: lista22.py  programa2.py  programa3.py  programa4.py  programa5.py  programa6.py
python/ejemplos-variados/: binarios.py  buscar_distritos.py  dice.py  factoring.py  lavadora.py  numeroharmonico.py  pastel_0.py  pastel_1.py  pastel_2.py  potenciasdedos.py  primos.py  pyplot_01.py  pyplot_02.py  pyplot_03.py  pyplot_04.py  pyplot_05.py  pyplot_06.py  pyplot_07.py  pyplot_08.py  raizcuadrada.py  ruina_del_jugador.py  (+2 more)
utec_demo1/: main.py  modData.py  modLogic.py  modUI.py  recursos.py
(+188 files in other folders)
